Fixes quote background not showing up on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5195,10 +5195,6 @@ h1 {
   padding: 0;
   background-image: url(http://mrap-blog.s3.amazonaws.com/quote_bg_tint.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   text-align: center; }
   .quote .quote-text {
     font-weight: 700;
