--- a/stylesheets/quote.scss
+++ b/stylesheets/quote.scss
@@ -6,10 +6,6 @@
   padding: 0;
   background-image: url(http://mrap-blog.s3.amazonaws.com/quote_bg_tint.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   text-align: center;
 
   .quote-text {
